--- a/Gestalt_SVG/src/assets/main.css
+++ b/Gestalt_SVG/src/assets/main.css
@@ -2,7 +2,7 @@
 a,
 .green {
   text-decoration: none;
-  color: hsla(160, 100%, 37%, 1);
+  color: #885F35;
   transition: 0.4s;
   padding: 3px;
 }
